# sherlock

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: examples.yml  rust-ci.yml  rust-docs.yml
examples/: indiant_chess_set.rs  missing_piece.rs  two_bagatelles.rs  vampires-simple.rs  vampires.rs
src/: analysis.rs  build.rs  legality.rs  lib.rs  main.rs  retractor.rs  rules.rs  squares.rs  state.rs  util.rs  utils.rs
src/retractor/: board.rs  chess_retraction.rs  piece_type.rs  retraction_gen.rs  zobrist.rs
src/rules/: captures.rs  captures_bounds.rs  corner_knight.rs  destinies.rs  events.rs  file_counting.rs  material.rs  missing.rs  mobility.rs  mod.rs  nb_captures.rs  origins.rs  parity.rs  pawn_on_2nd_rank.rs  pawn_on_3rd_rank.rs  refine_origins.rs  route_from_origins.rs  route_to_destinies.rs  route_to_reachable.rs  royalty_on_1st_rank.rs  steady.rs  steady_mobility.rs  surpassed_pawns.rs  tombs.rs  unretractable.rs
src/utils/: chess_utils.rs  k_groups.rs  mobility.rs  mod.rs  squares.rs  uncertain_sets.rs  util.rs
tests/: legality.rs
